<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.schoollist.fragments.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/home_dashboard"/>

    <fragment
            android:id="@+id/navigation_favorite"
            android:name="com.example.schoollist.fragments.favorite.FavoriteFragment"
            android:label="@string/title_favorite"
            tools:layout="@layout/favorite_dashboard"/>

    <fragment
            android:id="@+id/navigation_accepted"
            android:name="com.example.schoollist.fragments.accepted.AcceptedFragment"
            android:label="@string/title_accepted"
            tools:layout="@layout/accepted_dashboard"/>

    <fragment
        android:id="@+id/navigation_schoolDetails"
        android:name="com.example.schoollist.fragments.details.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/school_details_layout"/>
</navigation>