<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/schoolDetails" android:background="#ECE6F8">

    <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="155dp"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3" android:baselineAligned="false">
            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write"
                        android:textSize="20sp"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_125"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:id="@+id/writeSatScore" android:textColor="#673AB7"/>

            </LinearLayout>
            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/math"
                        android:textSize="20sp"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1205"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="#673AB7" android:id="@+id/mathSatScore"/>

            </LinearLayout>
            <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/read"
                        android:textSize="20sp"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_360"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:id="@+id/readSatScore" android:textColor="#673AB7"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="290dp">
        <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_email_24" android:contentDescription="@string/todo"/>
            <TextView
                    android:id="@+id/schoolEmail"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/school_gmail_com" android:textColor="#272132"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_local_phone_24"/>
            <TextView
                    android:textStyle="bold"
                    android:id="@+id/school_phone"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="+266 225 225" android:textColor="#272132"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_location_on_24"/>
            <TextView
                    android:textStyle="bold"
                    android:id="@+id/location"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/location" android:paddingStart="20dp" android:textColor="#272132"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_web_24" android:contentDescription="@string/todo"/>
            <TextView
                    android:textStyle="bold"
                    android:id="@+id/web_site"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/web_site" android:textColor="#272132"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_location_city_24" android:contentDescription="TODO"/>
            <TextView
                    android:textStyle="bold"
                    android:id="@+id/borough"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/borough" android:paddingStart="20dp" android:textColor="#272132"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:text="@string/school_title"
            android:layout_width="285dp"
            android:layout_height="121dp" android:layout_alignParentStart="true"
            android:layout_marginStart="55dp" android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" android:layout_marginTop="23dp" android:layout_marginLeft="55dp"
            android:id="@+id/schoolName" android:textColor="#272132" android:textStyle="bold"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="71dp" android:layout_marginEnd="71dp" android:gravity="center"
            android:layout_centerHorizontal="true" android:textSize="15sp"/>


</RelativeLayout>